added fields and fixed ip inject script
